[project]
name = "apexhq-scraper"
version = "0.1.0"
description = "ApexHQ scraping service"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0",
  "pydantic>=2.6.0",
  "beautifulsoup4>=4.12.0",
]

[project.scripts]
apexhq-scraper = "apexhq_scraper.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
